
- Other new featers:

  * `DummyAutoSuggest` and `DynamicAutoSuggest` were added.
  * `DummyClipboard` and `DynamicClipboard` were added.
  * `DummyCompleter` and `DynamicCompleter` were added.
  * `DummyHistory` and `DynamicHistory` was added.

  * `to_container` and `to_window` utilities were added.

****
- `run_sub_applications` returns a future instead of taking a callback.



- Deprecated 


Migrating readline applications:

TODO: finish changelog...
- Removed AcceptAction, AbortAction
buffer.initial_document was renamed to buffer.document

TODO: use focussed_window instead of focussed_control

TODO: clean up 'contrib'.
      clean up filters. Use @Condition as much as possible.
    rename pop_focus()
    Focus() should be an attribute of the Layout() class.
rename current_buffer to focussed_buffer
allow setting of focussed_buffer.  (Search in the UI.)

TODO: - remove alignment in TokenListControl
      - add background token to control.

TODO: add to_container() function that automatically wraps stuff in a window.


1.0.9: 2016-11-07
-----------------

Fixes:
- Fixed a bug in the `cooked_mode` context manager. This caused a bug in
  ptpython where executing `input()` would display ^M instead of accepting the
  input.
- Handle race condition in eventloop/posix.py
- Updated ANSI color names for vt100. (High and low intensity colors were
  swapped.)

New features:
- Added yank-nth-arg and yank-last-arg readline commands + Emacs bindings.
- Allow searching in Vi selection mode.
- Made text objects of the Vi 'n' and 'N' search bindings. This adds for
  instance the following bindings: cn, cN, dn, dN, yn, yN

1.0.8: 2016-10-16
-----------------

Fixes:
- In 'shortcuts': complete_while_typing was a SimpleFilter, not a CLIFilter.
- Always reset color attributes after rendering.
- Handle bug in Windows when '$TERM' is not defined.
- Ignore errors when calling tcgetattr/tcsetattr.
  (This handles the "Inappropriate ioctl for device" crash in some scenarios.)