@@ -175,7 +175,7 @@ application = Application(
     ]),
     style=style,
     mouse_support=True,
-    use_alternate_screen=True)
+    full_screen=True)
 
 
 def run():
